[gd_scene load_steps=8 format=3 uid="uid://tjlqwxjjgu2w"]

[ext_resource type="Script" path="res://bear.gd" id="1_qaooh"]
[ext_resource type="Texture2D" uid="uid://bi2yp3c0vd2cx" path="res://spritesheets/bear.png" id="2_uxmpo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lgckd"]
size = Vector2(300, 198)

[sub_resource type="Animation" id="Animation_pl6xg"]
resource_name = "run"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_0eea2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_mft2u"]
resource_name = "eat"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xutmo"]
_data = {
"RESET": SubResource("Animation_0eea2"),
"eat": SubResource("Animation_mft2u"),
"run": SubResource("Animation_pl6xg")
}

[node name="bear" type="Area2D"]
collision_layer = 0
script = ExtResource("1_qaooh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6, 11)
shape = SubResource("RectangleShape2D_lgckd")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -5)
scale = Vector2(1.06, 1.24)
texture = ExtResource("2_uxmpo")
hframes = 6
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xutmo")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
